# physicalai-final-prac

./: README.md
airobot_ws/src/rupe/rupe/: CHANGELOG.rst  CMakeLists.txt  package.xml
airobot_ws/src/rupe/rupe_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  rupe_hardware.xml
airobot_ws/src/rupe/rupe_control/config/: rupe_controllers.yaml
airobot_ws/src/rupe/rupe_control/include/rupe_control/: rupe_driver.hpp  rupe_hardware.hpp  visibility_control.h
airobot_ws/src/rupe/rupe_control/launch/: rupe_control.launch.py
airobot_ws/src/rupe/rupe_control/src/: rupe_driver.cpp  rupe_hardware.cpp
airobot_ws/src/rupe/rupe_description/: CMakeLists.txt  package.xml
airobot_ws/src/rupe/rupe_description/launch/: display.launch.py  display.rviz  endtip_display.launch.py
airobot_ws/src/rupe/rupe_description/rupe_description/: robot_description_loader.py
airobot_ws/src/rupe/rupe_description/test/: test_robot_description_loader.py
airobot_ws/src/rupe/rupe_description/urdf/: model.config  rupe.gazebo_ros2_control.xacro  rupe.ros2_control.xacro
airobot_ws/src/rupe/rupe_examples/: CMakeLists.txt  package.xml
airobot_ws/src/rupe/rupe_examples/launch/: camera_example.launch.py  camera_example.rviz  demo.launch.py  endtip_demo.launch.py  example.launch.py  no_moveit_demo.launch.py
airobot_ws/src/rupe/rupe_examples/src/: pick_and_place_tf.cpp
airobot_ws/src/rupe/rupe_gazebo/: CMakeLists.txt  package.xml
airobot_ws/src/rupe/rupe_gazebo/gui/: gui.config
airobot_ws/src/rupe/rupe_gazebo/launch/: endtip_rupe_with_table.launch.py  no_moveit_rupe_with_table.launch.py  rupe_with_table.launch.py  spawn_rupe.launch.py  spawn_rupe.launch.py.old
airobot_ws/src/rupe/rupe_gazebo/launch/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
airobot_ws/src/rupe/rupe_gazebo/launch/log/: latest_build
airobot_ws/src/rupe/rupe_gazebo/worlds/: table.sdf
airobot_ws/src/rupe/rupe_gazebo/worlds/install/: local_setup.sh  setup.bash  setup.sh
airobot_ws/src/rupe/rupe_gazebo/worlds/log/: latest_build
airobot_ws/src/rupe/rupe_moveit_config/: CMakeLists.txt  package.xml
airobot_ws/src/rupe/rupe_moveit_config/config/: controllers.yaml  rupe.srdf
airobot_ws/src/rupe/rupe_moveit_config/launch/: endtip_run_move_group.rviz  run_move_group.launch.py  run_move_group.rviz
airobot_ws/src/rupe_teleop/: CMakeLists.txt  package.xml  setup.cfg  setup.py
airobot_ws/src/rupe_teleop/rupe_teleop/: teleop_keyboard.py
